style fix for not aligned icons

--- a/my-grid/src/virtual-grid/styles/virtual.grid.scss
+++ b/my-grid/src/virtual-grid/styles/virtual.grid.scss
@@ -130,6 +130,8 @@
                             .virtual-grid-node-icon {
                                 height: 26px;
                                 width: 26px;
+                                min-width: 26px;
+                                min-height: 26px;
                                 display: flex;
                                 align-items: center;
                                 justify-content: center;
